# db_connector

./: LICENSE  pyproject.toml
db_connector/: __init__.py
db_connector/MSSQL/: mssql_connector.py
db_connector/PSQL/: psql_connector.py
